--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,6 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "types": ["vite-plugin-glsl/ext"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "types": ["vite-plugin-glsl/ext"]
   }
 }
